hphp/test/zend/good/Zend/tests/div_002.php.expectf

Fatal error: Invalid operand type was used: cannot perform this operation with arrays in %s/div_002.php on line 6
